fixed overflow on carousel

--- a/src/components/home/carousel.css
+++ b/src/components/home/carousel.css
@@ -66,5 +66,7 @@ nav {
 @media (max-width: 768px) {
     .carousel {
         transform: scale(1);
+        overflow: hidden;
+        width: 100%;
     }
 }
